--- a/_Cursos/React/Academind/react-course/src/index.css
+++ b/_Cursos/React/Academind/react-course/src/index.css
@@ -1,4 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+
 * {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  background-color: #fcf3f6;
+}
+
+h1 {
+  font-size: 2.5rem;
+  color: #2c292b;
+}
+
+h2 {
+  font-size: 1.5rem;
+  color: #2c292b;
+}
+
+/* * {
   box-sizing: border-box;
 }
 
@@ -71,4 +93,4 @@ h2 {
   height: 100vh;
   top: 0;
   left: 0;
-}
+} */
