--- a/React HookForm Challenge/react-hook-form-challenge/src/index.css
+++ b/React HookForm Challenge/react-hook-form-challenge/src/index.css
@@ -1,13 +1,24 @@
+@import url("https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1 {
+  font-family: "Permanent Marker", sans-serif;
+  text-align: center;
+  margin-bottom: -40px;
+  font-size: 40px;
+  color: deeppink;
+  text-shadow: 1px 1px darkmagenta;
 }
