redone tutorial parts

--- a/_Cursos/CompletReactDeveloper2022/monsters-rolodex/src/App.css
+++ b/_Cursos/CompletReactDeveloper2022/monsters-rolodex/src/App.css
@@ -1,8 +1,18 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to left, rgb(44, 48, 59) 0%, rgb(88, 95, 95) 100%);
   text-align: center;
 }
 
-
-html {
-  background-color: rgb(66, 62, 62);
+.app-title {
+  margin-top: 75px;
+  margin-bottom: 50px;
+  font-size: 76px;
+  color: #0ccac4;
+  font-family: "Bigelow Rules";
 }
