--- a/_Cursos/CompletReactDeveloper2022/monsters-rolodex/src/components/search-box/search-box.styles.css
+++ b/_Cursos/CompletReactDeveloper2022/monsters-rolodex/src/components/search-box/search-box.styles.css
@@ -1,4 +1,4 @@
-.search {
+.search-box {
   -webkit-appearance: none;
   border: none;
   outline: none;
@@ -6,4 +6,5 @@
   width: 150px;
   line-height: 30px;
   margin-bottom: 30px;
+  border-radius: 5px;
 }
